--- a/QT/version1.0.0/window_input_information.ui
+++ b/QT/version1.0.0/window_input_information.ui
@@ -10,6 +10,18 @@
     <height>271</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>512</width>
+    <height>271</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>512</width>
+    <height>271</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
