--- a/QT/version1.0.0/mainwindow.ui
+++ b/QT/version1.0.0/mainwindow.ui
@@ -55,7 +55,7 @@
       <x>580</x>
       <y>10</y>
       <width>611</width>
-      <height>151</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="title">
@@ -65,7 +65,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>20</y>
+       <y>10</y>
        <width>95</width>
        <height>20</height>
       </rect>
@@ -78,7 +78,7 @@
      <property name="geometry">
       <rect>
        <x>180</x>
-       <y>20</y>
+       <y>10</y>
        <width>95</width>
        <height>20</height>
       </rect>
@@ -91,7 +91,7 @@
      <property name="geometry">
       <rect>
        <x>340</x>
-       <y>20</y>
+       <y>10</y>
        <width>95</width>
        <height>20</height>
       </rect>
@@ -104,7 +104,7 @@
      <property name="geometry">
       <rect>
        <x>490</x>
-       <y>20</y>
+       <y>10</y>
        <width>95</width>
        <height>20</height>
       </rect>
@@ -116,7 +116,7 @@
     <widget class="QProgressBar" name="progressBar">
      <property name="geometry">
       <rect>
-       <x>20</x>
+       <x>30</x>
        <y>40</y>
        <width>61</width>
        <height>101</height>
@@ -135,7 +135,7 @@
     <widget class="QProgressBar" name="progressBar_2">
      <property name="geometry">
       <rect>
-       <x>180</x>
+       <x>200</x>
        <y>40</y>
        <width>61</width>
        <height>101</height>
@@ -151,7 +151,7 @@
     <widget class="QProgressBar" name="progressBar_3">
      <property name="geometry">
       <rect>
-       <x>340</x>
+       <x>360</x>
        <y>40</y>
        <width>61</width>
        <height>101</height>
@@ -167,7 +167,7 @@
     <widget class="QProgressBar" name="progressBar_4">
      <property name="geometry">
       <rect>
-       <x>490</x>
+       <x>510</x>
        <y>40</y>
        <width>61</width>
        <height>101</height>
@@ -191,6 +191,162 @@
      </property>
      <property name="text">
       <string>保留</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>80</y>
+       <width>31</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.5-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_6">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_7">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>130</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>80</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.5-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>30</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>180</x>
+       <y>130</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>80</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.5-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>30</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>340</x>
+       <y>130</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>480</x>
+       <y>80</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0.5-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_15">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>30</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1-</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_16">
+     <property name="geometry">
+      <rect>
+       <x>490</x>
+       <y>130</y>
+       <width>21</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>0-</string>
      </property>
     </widget>
    </widget>
@@ -228,7 +384,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>alexnet</string>
+       <string>AlexNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_6">
@@ -241,7 +397,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>densenet</string>
+       <string>DenseNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_7">
@@ -254,20 +410,20 @@
        </rect>
       </property>
       <property name="text">
-       <string>efficientNet</string>
+       <string>EfficientNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_8">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>50</y>
+        <y>70</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>mobilenet</string>
+       <string>MobileNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_9">
@@ -280,7 +436,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>ghostnet</string>
+       <string>GhostNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_10">
@@ -293,53 +449,53 @@
        </rect>
       </property>
       <property name="text">
-       <string>inception</string>
+       <string>Inception</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_11">
       <property name="geometry">
        <rect>
         <x>380</x>
-        <y>50</y>
+        <y>70</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>squeezenet</string>
+       <string>SqueezeNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_12">
       <property name="geometry">
        <rect>
         <x>140</x>
-        <y>50</y>
+        <y>70</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>resnet</string>
+       <string>ResNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_13">
       <property name="geometry">
        <rect>
         <x>270</x>
-        <y>50</y>
+        <y>70</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>shufflenet</string>
+       <string>ShuffleNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_14">
       <property name="geometry">
        <rect>
-        <x>140</x>
-        <y>80</y>
+        <x>380</x>
+        <y>120</y>
         <width>95</width>
         <height>20</height>
        </rect>
@@ -352,91 +508,52 @@
       <property name="geometry">
        <rect>
         <x>480</x>
-        <y>50</y>
+        <y>70</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>transformer</string>
+       <string>Transformer</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_16">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>80</y>
+        <y>120</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>vggnet</string>
+       <string>VggNet</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_17">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>80</y>
+        <x>140</x>
+        <y>120</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>others</string>
+       <string>RexNeXt</string>
       </property>
      </widget>
      <widget class="QRadioButton" name="radioButton_18">
       <property name="geometry">
        <rect>
         <x>270</x>
-        <y>80</y>
+        <y>120</y>
         <width>95</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
        <string>PCA+SVM</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton">
-      <property name="geometry">
-       <rect>
-        <x>400</x>
-        <y>110</y>
-        <width>181</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>选择文件(仅Others选中时可用)</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit">
-      <property name="geometry">
-       <rect>
-        <x>72</x>
-        <y>110</y>
-        <width>321</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>（当且仅当others选中时可用）</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>110</y>
-        <width>111</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>文件路径：</string>
       </property>
      </widget>
     </widget>
